# Haskell-STAR2JSON-Executable

./: parsestar-aeson.cabal
src/: Main.hs
